syntax = "proto3";

//分页信息模型
message PageInfoModel {
	int32 PageIndex = 1;
	int32 PageSize = 2;
	int32 PageCount = 3;
	int32 DataCount = 4;
}

//唯一操作请求模型
message OnlyOperatingRequestModel {
	string ID = 1;
}

//空返回模型
message VoidResultModel {
	int32 Status = 1;
	string Message = 2;
}